--- a/app/src/main/res/layout/civilizations_list_item.xml
+++ b/app/src/main/res/layout/civilizations_list_item.xml
@@ -1,8 +1,7 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:id="@+id/container"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    android:background="@color/teal">
+    android:background="@color/light_green">
 
     <TextView
         android:id="@+id/tv_civilization_name"
@@ -22,4 +21,8 @@
         android:layout_height="match_parent"
         android:layout_weight="1"
         android:text="@string/civilization_list_item_army_type" />
+    <ImageView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:src="@drawable/ic_forum" />
 </LinearLayout>
