--- a/app/src/main/res/layout/fragment_civilizations.xml
+++ b/app/src/main/res/layout/fragment_civilizations.xml
@@ -7,43 +7,126 @@
     tools:context=".uis.fragments.CivilizationsFragment">
 
 
-<LinearLayout
-    android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    android:orientation="vertical">
-    <com.google.android.material.textview.MaterialTextView
-        android:id="@+id/civ_id"
+    <LinearLayout
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:text="id"/>
-    <com.google.android.material.textview.MaterialTextView
-        android:id="@+id/civ_name"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:text="name"/>
-    <com.google.android.material.textview.MaterialTextView
-        android:id="@+id/civ_expansion"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:text="expansion"/>
-    <com.google.android.material.textview.MaterialTextView
-        android:id="@+id/civ_type"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:text="army type"/>
+        android:layout_height="match_parent"
+        android:orientation="vertical"
+        app:layout_constraintStart_toStartOf="parent">
 
-    <Button
-        android:id="@+id/civ_button"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="Click me"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.427" />
-</LinearLayout>
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_margin="10dp">
 
+
+            <com.google.android.material.textview.MaterialTextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_weight="1"
+                android:background="@color/light_orange"
+                android:padding="5dp"
+                android:text="@string/civilization_name"
+                android:textSize="20sp" />
+
+            <EditText
+                android:id="@+id/editCivName"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_weight="4"
+                android:ems="10"
+                android:inputType="textPersonName" />
+        </LinearLayout>
+
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_margin="10dp">
+
+            <com.google.android.material.textview.MaterialTextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_weight="1"
+                android:background="@color/light_orange"
+                android:padding="5dp"
+                android:text="@string/expansion"
+                android:textSize="20sp" />
+
+            <EditText
+                android:id="@+id/editCivExpansion"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_weight="4"
+                android:ems="10"
+                android:inputType="textPersonName" />
+        </LinearLayout>
+
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_margin="10dp">
+
+            <com.google.android.material.textview.MaterialTextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_weight="1"
+                android:background="@color/light_orange"
+                android:padding="5dp"
+                android:text="@string/civilization_army_type"
+                android:textSize="20sp" />
+
+            <EditText
+                android:id="@+id/editCivArmyType"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_weight="4"
+                android:ems="10"
+                android:inputType="textPersonName" />
+        </LinearLayout>
+
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_margin="10dp"
+            android:orientation="horizontal">
+
+            <Button
+                android:id="@+id/addButton"
+                style="@style/Widget.AppCompat.Button.Colored"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_weight="1"
+                android:text="@string/add_to_collection"
+                android:textSize="12sp" />
+
+
+            <Button
+                style="@style/Widget.AppCompat.Button.Colored"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_weight="1"
+                android:text="@string/show_collection"
+                android:textSize="12sp" />
+
+            <Button
+                android:id="@+id/deleteAllButton"
+                style="@style/Widget.AppCompat.Button.Colored"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_weight="1"
+                android:text="@string/delete_all"
+                android:textColor="#EDEDE7"
+                android:textSize="12sp" />
+        </LinearLayout>
+
+        <androidx.recyclerview.widget.RecyclerView
+            android:id="@+id/recyclerViewCivilizations"
+            android:layout_width="match_parent"
+            android:layout_margin="30dp"
+            android:padding="10dp"
+            android:layout_height="match_parent"
+            android:layout_marginBottom="20dp" />
+
+    </LinearLayout>
 
 
 </androidx.constraintlayout.widget.ConstraintLayout>
