--- a/app/src/main/res/menu/bottom_nav_menu.xml
+++ b/app/src/main/res/menu/bottom_nav_menu.xml
@@ -3,7 +3,7 @@
 
     <item
         android:id="@+id/navigation_civilizations"
-        android:icon="@drawable/ic_forum"
+        android:icon="@drawable/ic_collections"
         android:title="@string/title_civilizations" />
 
     <item
