--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -1,11 +1,10 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <color name="blue">#1088E8</color>
-    <color name="purple">#9767DD</color>
-    <color name="orange">#FFC107</color>
-    <color name="teal">#FF03DAC5</color>
-    <color name="dark_green">#FF018786</color>
-    <color name="black">#FF000000</color>
-    <color name="white">#FFFFFFFF</color>
-    <color name="white_light">#FFFFFF</color>
+    <color name="sky_blue">#18FFFF</color>
+    <color name="light_green">#76FF03</color>
+    <color name="medium_blue">#009aff</color>
+    <color name="light_orange">#ff593a</color>
+    <color name="black">#212121</color>
+    <color name="blue_gray">#607D8B</color>
+    <color name="light_gray">#BDBDBD</color>
 </resources>
