--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -7,4 +7,5 @@
     <color name="black">#212121</color>
     <color name="blue_gray">#607D8B</color>
     <color name="light_gray">#BDBDBD</color>
+    <color name="dark_pink">#523440</color>
 </resources>
