--- a/app/src/main/res/layout/civilizations_list_item.xml
+++ b/app/src/main/res/layout/civilizations_list_item.xml
@@ -1,28 +1,55 @@
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<com.google.android.material.card.MaterialCardView xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    android:background="@color/light_green">
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+    android:layout_margin="8dp"
+    app:cardCornerRadius="6dp"
+    app:cardElevation="6dp">
 
-    <TextView
-        android:id="@+id/tv_civilization_name"
-        android:layout_width="0dp"
-        android:layout_height="30dp"
-        android:layout_weight="1"
-        android:text="@string/civilization_list_item_title" />
-    <TextView
-        android:id="@+id/tv_civilization_expansion"
-        android:layout_width="30dp"
-        android:layout_height="match_parent"
-        android:layout_weight="1"
-        android:text="@string/civilization_list_item_expansion" />
-    <TextView
-        android:id="@+id/tv_army_type"
-        android:layout_width="30dp"
-        android:layout_height="match_parent"
-        android:layout_weight="1"
-        android:text="@string/civilization_list_item_army_type" />
-    <ImageView
-        android:layout_width="wrap_content"
+
+    <LinearLayout
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:src="@drawable/ic_forum" />
-</LinearLayout>
+        android:padding="8dp"
+        android:orientation="vertical">
+
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:orientation="horizontal">
+            <TextView
+                android:id="@+id/tv_civilization_name"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:padding="1dp"
+                android:layout_weight="9"
+                android:textColor="@color/light_green"
+                android:textSize="@dimen/civilizations_list_item_text"
+                android:text="@string/civilization_list_item_title" />
+
+            <ImageView
+                android:layout_width="0dp"
+                android:layout_height="wrap_content"
+                android:layout_weight="1"
+                android:src="@drawable/ic_forum" />
+        </LinearLayout>
+
+        <TextView
+            android:id="@+id/tv_civilization_expansion"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:padding="1dp"
+            android:textColor="@color/light_green"
+            android:textSize="@dimen/civilizations_list_item_text"
+            android:text="@string/civilization_list_item_expansion" />
+
+        <TextView
+            android:id="@+id/tv_army_type"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:padding="1dp"
+            android:textColor="@color/light_green"
+            android:textSize="@dimen/civilizations_list_item_text"
+            android:text="@string/civilization_list_item_army_type" />
+    </LinearLayout>
+</com.google.android.material.card.MaterialCardView>
