--- a/app/src/main/res/layout/fragment_civilizations.xml
+++ b/app/src/main/res/layout/fragment_civilizations.xml
@@ -4,14 +4,30 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".uis.fragments.CivilizationsFragment">
+    tools:context=".uis.fragments.CivilizationsFragment"
+    android:layout_marginTop="60dp">
 
-
+    <com.google.android.material.textview.MaterialTextView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_weight="1"
+        android:background="@color/sky_blue"
+        android:padding="5dp"
+        android:text="@string/civilization_own"
+        android:textColor="@color/black"
+        android:textStyle="italic|bold"
+        android:textSize="20sp"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:orientation="vertical"
-        app:layout_constraintStart_toStartOf="parent">
+        android:layout_marginTop="60dp"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        tools:layout_editor_absoluteY="124dp">
 
         <LinearLayout
             android:layout_width="match_parent"
@@ -23,7 +39,9 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_weight="1"
-                android:background="@color/light_orange"
+                android:background="@color/sky_blue"
+                android:textColor="@color/black"
+                android:textStyle="bold"
                 android:padding="5dp"
                 android:text="@string/civilization_name"
                 android:textSize="20sp" />
@@ -46,8 +64,10 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_weight="1"
-                android:background="@color/light_orange"
+                android:background="@color/sky_blue"
                 android:padding="5dp"
+                android:textStyle="bold"
+                android:textColor="@color/black"
                 android:text="@string/expansion"
                 android:textSize="20sp" />
 
@@ -69,7 +89,9 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_weight="1"
-                android:background="@color/light_orange"
+                android:background="@color/sky_blue"
+                android:textColor="@color/black"
+                android:textStyle="bold"
                 android:padding="5dp"
                 android:text="@string/civilization_army_type"
                 android:textSize="20sp" />
@@ -91,40 +113,49 @@
 
             <Button
                 android:id="@+id/addButton"
-                style="@style/Widget.AppCompat.Button.Colored"
+                style="@style/Widget.AppCompat.Button.Borderless.Colored"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_weight="1"
                 android:text="@string/add_to_collection"
                 android:textSize="12sp" />
 
-
-            <Button
-                style="@style/Widget.AppCompat.Button.Colored"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_weight="1"
-                android:text="@string/show_collection"
-                android:textSize="12sp" />
-
             <Button
                 android:id="@+id/deleteAllButton"
-                style="@style/Widget.AppCompat.Button.Colored"
+                style="@style/Widget.AppCompat.Button.Borderless.Colored"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_weight="1"
                 android:text="@string/delete_all"
-                android:textColor="#EDEDE7"
+                android:textColor="#ED0606"
+                android:textStyle="bold"
                 android:textSize="12sp" />
-        </LinearLayout>
 
+        </LinearLayout>
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_margin="10dp"
+            android:orientation="horizontal">
+            <com.google.android.material.textview.MaterialTextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_weight="1"
+                android:background="@color/dark_pink"
+                android:padding="5dp"
+                android:textStyle="bold"
+                android:textAlignment="center"
+                android:textColor="@color/light_green"
+                android:text="@string/my_own"
+                android:textSize="20sp" />
+        </LinearLayout>
         <androidx.recyclerview.widget.RecyclerView
             android:id="@+id/recyclerViewCivilizations"
             android:layout_width="match_parent"
+            android:layout_height="wrap_content"
             android:layout_margin="30dp"
-            android:padding="10dp"
-            android:layout_height="match_parent"
-            android:layout_marginBottom="20dp" />
+            android:layout_marginBottom="20dp"
+            android:padding="10dp" />
 
     </LinearLayout>
 
