--- a/app/src/main/res/navigation/mobile_navigation.xml
+++ b/app/src/main/res/navigation/mobile_navigation.xml
@@ -12,15 +12,15 @@
 
     <fragment
         android:id="@+id/navigation_favorites"
-        android:name="com.example.civilization_app.uis.fragments.FavoritesFragment"
-        android:label="@string/title_favorites"
-        tools:layout="@layout/fragment_favorites" />
+        android:name="com.example.civilization_app.uis.fragments.AboutFragment"
+        android:label="@string/title_info"
+        tools:layout="@layout/fragment_about" />
 
     <fragment
         android:id="@+id/navigation_share"
-        android:name="com.example.civilization_app.uis.fragments.ShareFragment"
-        android:label="@string/title_share"
-        tools:layout="@layout/fragment_share" />
+        android:name="com.example.civilization_app.uis.fragments.SearchFragment"
+        android:label="@string/title_search"
+        tools:layout="@layout/fragment_search" />
     <fragment android:id="@+id/placeholder" >
         <action
             android:id="@+id/action_placeholder_to_navigation_civilizations"
