--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -1,8 +1,8 @@
 <resources xmlns:tools="http://schemas.android.com/tools">
 
-    <style name="Theme.Civilization_App" parent="Theme.AppCompat.DayNight">
+    <style name="Theme.Civilization_App" parent="Theme.AppCompat.NoActionBar">
 
-        <item name="colorPrimary">@color/sky_blue</item>
+        <item name="colorPrimary">@color/light_orange</item>
         <item name="colorPrimaryVariant">@color/light_green</item>
         <item name="colorOnPrimary">@color/medium_blue</item>
 
