--- a/app/src/main/res/layout/fragment_about.xml
+++ b/app/src/main/res/layout/fragment_about.xml
@@ -14,7 +14,7 @@
         android:layout_height="wrap_content"
         android:text="@string/aoe2_fan_wiki"
         android:textSize="30sp"
-        android:textColor="@color/light_green"
+        android:textColor="@color/lighter_purple"
         android:textStyle="bold|italic"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
@@ -38,7 +38,7 @@
         android:layout_marginStart="32dp"
         android:layout_marginEnd="32dp"
         android:text="@string/wiki_text"
-        android:textColor="@color/sky_blue"
+        android:textColor="@color/light_green"
         android:textSize="20sp"
         android:textStyle="italic"
         app:layout_constraintEnd_toEndOf="parent"
@@ -49,9 +49,11 @@
         android:id="@+id/info_fab"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_gravity="bottom|right"
+        android:layout_gravity="bottom|end"
         android:layout_marginEnd="32dp"
         android:layout_marginBottom="104dp"
+        app:backgroundTint="@color/dark_green"
+        app:rippleColor="@color/light_green"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:srcCompat="@drawable/ic_info" />
