--- a/app/src/main/res/layout/fragment_search.xml
+++ b/app/src/main/res/layout/fragment_search.xml
@@ -10,13 +10,15 @@
 
     <EditText
         android:id="@+id/editTextReq"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
+        android:layout_width="188dp"
+        android:layout_height="47dp"
         android:layout_marginTop="48dp"
         android:layout_marginEnd="28dp"
         android:ems="10"
         android:inputType="textPersonName"
         app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="1.0"
+        app:layout_constraintStart_toEndOf="@+id/requestButton"
         app:layout_constraintTop_toTopOf="parent" />
 
     <Button
@@ -25,7 +27,9 @@
         android:layout_height="wrap_content"
         android:layout_marginStart="16dp"
         android:layout_marginTop="48dp"
-        android:text="GET FROM WEB"
+        android:backgroundTint="@color/lighter_green"
+        android:text="@string/add_to_collection"
+        android:textColor="@color/dark_purple"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
 
@@ -69,7 +73,7 @@
         android:layout_height="wrap_content"
         android:layout_marginTop="20dp"
         android:text="@string/aoe2_civilizations"
-        android:textColor="@color/sky_blue"
+        android:textColor="@color/light_orange"
         android:textSize="30sp"
         android:textStyle="italic"
         app:layout_constraintEnd_toEndOf="parent"
