--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -2,13 +2,13 @@
 
     <style name="Theme.Civilization_App" parent="Theme.AppCompat.NoActionBar">
 
-        <item name="colorPrimary">@color/light_orange</item>
-        <item name="colorPrimaryVariant">@color/light_green</item>
-        <item name="colorOnPrimary">@color/medium_blue</item>
+        <item name="colorPrimary">#64ffda</item>
+        <item name="colorPrimaryVariant">#9effff</item>
+        <item name="colorOnPrimary">#14cba8</item>
 
-        <item name="colorSecondary">@color/blue_gray</item>
-        <item name="colorSecondaryVariant">@color/light_gray</item>
-        <item name="colorOnSecondary">@color/light_orange</item>
+        <item name="colorSecondary">#ba68c8</item>
+        <item name="colorSecondaryVariant">#ee98fb</item>
+        <item name="colorOnSecondary">#883997</item>
 
         <item name="android:statusBarColor" tools:targetApi="l">?attr/colorPrimaryVariant</item>
 
